# uiohook-rs

./: .gitignore  Cargo.toml  README.md  build.rs  wrapper.h
.github/workflows/: release.yml  sync_submodule.yml
examples/: demo.rs  demo_keyboard.rs  demo_mouse.rs  demo_stop.rs  demo_wheel.rs  pretty_demo.rs
scripts/: check_ax.c
src/: bindings.rs  error.rs  hook.rs  keyboard.rs  legacy.rs  lib.rs  logger.rs  mouse.rs  uiohook.rs  utils.rs  wheel.rs
src/hook/: keyboard.rs  wheel.rs
