[package]
name = "uiohook-rs"
version = "0.1.0"
edition = "2021"
description = "Rust bindings for libuiohook"
license = "GPL-3.0"
repository = "https://github.com/efJerryYang/uiohook-rs"

[dependencies]
libc = "0.2"
lazy_static = "1.5"
colored = "2.1"
termios = "0.3"
ctrlc = "3.4"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"