[package]
name = "uiohook-rs"
version = "0.2.5"
edition = "2021"
description = "uiohook-rs is a Rust wrapper for the libuiohook, providing cross-platform keyboard and mouse hooking capabilities."
license = "GPL-3.0"
repository = "https://github.com/efJerryYang/uiohook-rs"
authors = ["Jerry Yang <efjerryyang@outlook.com>"]
keywords = ["uiohook", "libuiohook", "keyboard", "mouse", "wheel"]

[dependencies]
libc = "0.2"
colored = "2.1"
ctrlc = "3.4"
thiserror = "1.0"
core-foundation = "0.10"

[build-dependencies]
bindgen = "0.69"
cc = "1.0"
pkg-config = "0.3"
